# llm-tool-whisper

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml  docker-compose.yml  lefthook.yml
.github/: dependabot.yml
.github/workflows/: docker.yml
scripts/: setup-hooks.sh
src/: bridge.rs  config.rs  error.rs  main.rs  protocol.rs  provider.rs  server.rs  stream.rs  upstream.rs  xml_protocol.rs
